--- a/Lexiconline/package.json
+++ b/Lexiconline/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.26.1",
-    "sass": "^1.78.0"
+    "sass": "^1.80.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
